--- a/src/main/resources/view/add_product.fxml
+++ b/src/main/resources/view/add_product.fxml
@@ -9,15 +9,30 @@
 <?import javafx.scene.layout.BorderPane?>
 
 
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuItem?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
-   <center>
+    <top>
+        <MenuBar BorderPane.alignment="CENTER">
+            <menus>
+                <Menu mnemonicParsing="false" text="File">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Back" />
+                    </items>
+                </Menu>
+
+            </menus>
+        </MenuBar>
+    </top>
+    <center>
       <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
           <Tab text="AddProduct">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="btnSave" layoutX="235.0" layoutY="304.0" mnemonicParsing="false" onAction="#saveProduct" text="Save" textFill="#e41b1b" />
+                        <Button fx:id="btnSave" layoutX="235.0" layoutY="304.0" mnemonicParsing="false" text="Save" textFill="#e41b1b" />
                         <Label fx:id="productName" layoutX="29.0" layoutY="37.0" text="Product Name" />
                         <TextField layoutX="158.0" layoutY="32.0" />
                      </children>
