--- a/src/main/resources/view/main.fxml
+++ b/src/main/resources/view/main.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.UG.controller.MainController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -17,7 +16,7 @@
           </Menu>
             <Menu mnemonicParsing="false" text="Add">
               <items>
-              <MenuItem mnemonicParsing="false" text="AddProduct" />
+              <MenuItem fx:id="mnuItemAddProduct" mnemonicParsing="false" text="AddProduct" />
                   <MenuItem mnemonicParsing="false" text="AddClient" />
                 <MenuItem mnemonicParsing="false" text="Action 1" />
               </items>
