--- a/src/main/resources/view/add_product.fxml
+++ b/src/main/resources/view/add_product.fxml
@@ -2,16 +2,15 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuItem?>
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
@@ -32,9 +31,15 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <Button fx:id="btnSave" layoutX="235.0" layoutY="304.0" mnemonicParsing="false" text="Save" textFill="#e41b1b" />
-                        <Label fx:id="productName" layoutX="29.0" layoutY="37.0" text="Product Name" />
-                        <TextField layoutX="158.0" layoutY="32.0" />
+                        <Button fx:id="btnSave" layoutX="242.0" layoutY="284.0" mnemonicParsing="false" text="Save" textFill="#e41b1b" />
+                        <Label fx:id="lblProductName" layoutX="30.0" layoutY="37.0" text="Product Name" />
+                        <TextField fx:id="txtFieldProductName" layoutX="158.0" layoutY="32.0" />
+                        <Label fx:id="lblUM" layoutX="94.0" layoutY="76.0" text="UM" />
+                        <Label fx:id="lblQuantity" layoutX="61.0" layoutY="123.0" text="Quantity" />
+                        <Label fx:id="lblPrice" layoutX="78.0" layoutY="165.0" text="Price" />
+                        <TextField fx:id="txtFieldUM" layoutX="158.0" layoutY="71.0" />
+                        <TextField fx:id="txtFieldQuantity" layoutX="158.0" layoutY="118.0" />
+                        <TextField fx:id="txtFieldPrice" layoutX="158.0" layoutY="160.0" />
                      </children>
                   </AnchorPane>
             </content>
